--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,13 @@
 
     <groupId>org.example</groupId>
     <artifactId>IPoAT-Parent</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>IPoAT-Data</module>
+        <module>IPoAT-Logic</module>
+        <module>IPoAT-Presentation</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
