--- a/IPoAT-Entry/pom.xml
+++ b/IPoAT-Entry/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>IPoAT-Presentation</artifactId>
+    <artifactId>IPoAT-Entry</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -18,11 +18,10 @@
 
     <dependencies>
         <dependency>
-            <artifactId>IPoAT-Logic</artifactId>
+            <artifactId>IPoAT-Presentation</artifactId>
             <groupId>org.example</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-
 
 </project>
