--- a/IPoAT-Logic/pom.xml
+++ b/IPoAT-Logic/pom.xml
@@ -16,4 +16,13 @@
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <artifactId>IPoAT-Data</artifactId>
+            <groupId>org.example</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
+
 </project>
