--- a/IPoAT-Core/pom.xml
+++ b/IPoAT-Core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>IPoAT-Data</artifactId>
+    <artifactId>IPoAT-Core</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
