--- a/IPoAT-Logic/pom.xml
+++ b/IPoAT-Logic/pom.xml
@@ -18,7 +18,7 @@
 
     <dependencies>
         <dependency>
-            <artifactId>IPoAT-Data</artifactId>
+            <artifactId>IPoAT-Core</artifactId>
             <groupId>org.example</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
