--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>IPoAT-Data</module>
+        <module>IPoAT-Core</module>
         <module>IPoAT-Logic</module>
         <module>IPoAT-Presentation</module>
         <module>IPoAT-Entry</module>
